--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Metode Pembayaran - FikaDev</title>
+  <title>Metode Pembayaran - DarulzXD</title>
   <style>
     body {
       margin: 0;
@@ -126,7 +126,7 @@
     <div class="payment">
       <div class="label">DANA</div>
       <div class="number">
-        <span id="dana">085800650661</span>
+        <span id="dana">087890174423</span>
         <button class="copy-btn" onclick="copyText('dana')">Salin</button>
       </div>
     </div>
@@ -134,7 +134,7 @@
     <div class="payment">
       <div class="label">GoPay</div>
       <div class="number">
-        <span id="gopay">085800650661</span>
+        <span id="gopay">087884058288</span>
         <button class="copy-btn" onclick="copyText('gopay')">Salin</button>
       </div>
     </div>
@@ -148,9 +148,9 @@
 
     <div class="qris">
       <button id="qrisToggle" class="qris-btn" onclick="toggleQRIS()">📷 Tampilkan QRIS</button>
-      <img id="qris-img" class="qris-img" src="https://img1.pixhost.to/images/6619/613273636_fikadev.jpg" alt="QRIS All Payment">
+      <img id="qris-img" class="qris-img" src="https://files.catbox.moe/zgjadx.jpeg" alt="QRIS All Payment">
       <br>
-      <a id="downloadBtn" href="https://img1.pixhost.to/images/6619/613273636_fikadev.jpg" download="QRIS_FikaDev.jpg" style="display: none;">
+      <a id="downloadBtn" href="https://files.catbox.moe/zgjadx.jpeg" download="QRIS_FikaDev.jpg" style="display: none;">
         <button class="download-btn">⬇️ Download QRIS</button>
       </a>
     </div>
