--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@
     <div class="payment">
       <div class="label">OVO</div>
       <div class="number">
-        <span id="ovo">TIDAK TERSEDIA.</span>
+        <span id="ovo">087884058288</span>
+      <button class="copy-btn" onclick="copyText('dana')">Salin</button>
       </div>
     </div>
 
