--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@
     <button id="logBtn" onclick="toggleLog()">📄 Show Log Activity</button>
   </div>
 
-  <img id="qris-img" class="qris-img" src="https://img1.pixhost.to/images/6619/613273636_fikadev.jpg" alt="QRIS">
+  <img id="qris-img" class="qris-img" src="https://files.catbox.moe/zgjadx.jpeg" alt="QRIS">
 
-  <a id="downloadBtn" class="download-link" href="https://img1.pixhost.to/images/6619/613273636_fikadev.jpg" download="QRIS_FikaBot.jpg">
+  <a id="downloadBtn" class="download-link" href="https://files.catbox.moe/zgjadx.jpeg" download="QRIS_FikaBot.jpg">
     <button>⬇️ Download QRIS</button>
   </a>
 
@@ -166,7 +166,7 @@
   <div class="runtime" id="battery">🔋 Memuat baterai...</div>
 
   <div class="footer">
-    📌 Powered by Handi • Store: Hanami Digital • Website: <a href="https://handi-lann.privhandi.my.id" target="_blank">FikaBot</a>
+    © Powered by Handi | Website Payment<a href="https://handi-lann.privhandi.my.id" target="_blank">FikaBot</a>
   </div>
 
   <div class="log" id="logArea">🔍 Log aktif...</div>
