--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 <script>
   const logArea = document.getElementById("logArea");
 
-  function log(msg, tag = "FikaBot") {
+  function log(msg, tag = "Hanami") {
     const time = new Date().toLocaleTimeString('id-ID');
     const line = `<span style="color:lime;">[${time}]</span> <span style="color:cyan;">[${tag}]</span> ${msg}<br>`;
     logArea.innerHTML += line;
