--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
   <div class="runtime" id="battery">🔋 Memuat baterai...</div>
 
   <div class="footer">
-    © Powered by Handi | Website Payment<a href="https://handi-lann.privhandi.my.id" target="_blank">FikaBot</a>
+    © Powered by Handi | Website Payment<a href="https://hanami.privhandi.my.id" target="_blank">HanamiCloud</a>
   </div>
 
   <div class="log" id="logArea">🔍 Log aktif...</div>
