--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
   <div class="btn-group">
     <button id="qrisBtn" onclick="toggleQRIS()">📷 Tampilkan QRIS</button>
-    <button id="saluranBtn" onclick="window.open('https://whatsapp.com/channel/0029Vb69nLG23n3aRi3cpf2U', '_blank')">📢 Saluran Hanami</button>
+    <button id="saluranBtn" onclick="window.open('https://whatsapp.com/channel/0029VbAUI1nAu3aXVOsx1e0i', '_blank')">📢 Info Saluran</button>
     <button id="logBtn" onclick="toggleLog()">📄 Show Log Activity</button>
   </div>
 
@@ -166,7 +166,7 @@
   <div class="runtime" id="battery">🔋 Memuat baterai...</div>
 
   <div class="footer">
-    © Powered by Handi | Website Payment<a href="https://hanami.privhandi.my.id" target="_blank">HanamiCloud</a>
+    © Powered by Handi | Website Payment By<a href="https://hanami.privhandi.my.id" target="_blank">HanamiCloud</a>
   </div>
 
   <div class="log" id="logArea">🔍 Log aktif...</div>
